--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -342,7 +342,16 @@ nav {
     transition: 0.3s;
     cursor: pointer;
   }
-
+  .apply-btn{
+    padding: 0.75rem 1.5rem;
+    outline: none;
+    border: none;
+    font-size: 1rem;
+    white-space: nowrap;
+    border-radius: 10px;
+    transition: 0.3s;
+    cursor: pointer;
+  }
   .sign__up {
     color: var(--text-dark);
     background-color: transparent;
