--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --Marine-blue: hsl(213, 96%, 18%);
   --Purplish-blue: hsl(243, 100%, 62%);
   --Pastel-blue: hsl(228, 100%, 84%);
@@ -10,7 +10,7 @@
   --Magnolia: hsl(217, 100%, 97%);
   --Alabaster: hsl(231, 100%, 99%);
   --White: hsl(0, 0%, 100%);
-}
+} */
 * {
   box-sizing: border-box;
   font-family: "Ubuntu", sans-serif;
