--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,14 +22,18 @@ img {
 a {
   text-decoration: none;
   transition: 0.3s;
+  color: var(--white);
 }
 
 body {
   font-family: "Raleway", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
   max-width: var(--max-width);
+  width: 100%;
   margin-inline: auto;
   padding: 1rem;
   display: flex;
@@ -115,6 +119,7 @@ nav {
 
 .header__container {
   max-width: var(--max-width);
+  width: 100%;
   margin: auto;
   padding: 2rem 1rem;
   display: grid;
@@ -142,11 +147,10 @@ nav {
 }
 
 .header__container form {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-  gap: 1rem 0;
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  /* flex-direction: column; */
   background-color: #f6f4f7;
   border-radius: 10px;
 }
@@ -154,9 +158,10 @@ nav {
 .header__container .input__row {
   padding: 1rem;
   display: flex;
-  align-items: center;
-  gap: 1rem;
-  flex: 1;
+  justify-content: space-around;
+  /* align-items: center; */
+  /* gap: 1rem; */
+  /* flex: 1; */
 }
 
 .header__container .input__group {
@@ -170,14 +175,6 @@ nav {
 }
 
 .header__container .desc {
-  width: max-content;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-  background-color: transparent;
-}
-
-.header__container select {
   width: 100%;
   outline: none;
   border: none;
@@ -185,9 +182,9 @@ nav {
   background-color: transparent;
 }
 
-.header__container button {
-  width: 100%;
-  padding: 1rem 2rem;
+
+.apply-btn {
+  padding: 0.5rem 1rem;
   outline: none;
   border: none;
   font-size: 1rem;
@@ -195,10 +192,69 @@ nav {
   color: var(--white);
   background-color: var(--primary-color);
   border-radius: 10px;
-  cursor: pointer;
+  /* cursor: pointer; */
+  
 }
 
-@media (width > 540px) {
+.app {
+  display: flex;
+  justify-content: center;
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 2rem 1rem;
+ 
+}
+
+.app__loan-list {
+   width: 100%;
+    max-width: var(--max-width);
+}
+
+.app__loan-cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.5rem;
+  justify-content: center;
+  /* justify-content: space-between; */
+}
+
+.app__loan-card {
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 1.5rem;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  transition: transform 0.3s ease;
+}
+
+.app__loan-card:hover {
+  transform: translateY(-5px);
+}
+
+.app__loan-card--housing {
+  background-color: #00B050;
+}
+
+.app__loan-card-title {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.app__loan-card-text {
+  font-size: 1rem;
+}
+
+
+@media (max-width: 539px) {
+  .header__container .input__row {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+@media (min-width: 540px) {
   .nav__contact {
     gap: 2rem;
   }
@@ -208,7 +264,7 @@ nav {
   }
 }
 
-@media (width > 768px) {
+@media (min-width: 768px) {
   nav {
     padding: 2rem 1rem;
     flex-direction: row;
@@ -232,9 +288,13 @@ nav {
   .header__image {
     grid-area: 1/2/2/3;
   }
+
+  .app__loan-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-@media (width > 1024px) {
+@media (min-width: 1024px) {
   .header__container form {
     flex-direction: row;
   }
